Fix position and alignment

--- a/_sass/_slider.scss
+++ b/_sass/_slider.scss
@@ -94,6 +94,7 @@
 				display: none;
 				@include mq($bp-larger-than-phablet) {
 					display: block;
+					text-align: left;
 				}
 			}
 
@@ -105,6 +106,7 @@
 			}
 
 			.button {
+				margin: 0; 
 				@include mq($bp-larger-than-phablet) {
 					float: right;
 				}
